
	lfroen:
		* Prevent bad_alloc thrown on invalid connection attempts on EC.
		* Adding support for 64-bit filesize to webserver and php

	lionel77:
		* Display "Share Ratio" in shared files list.

	Phoenix:
		* Compilation fix for auto_ptr<> on Mac.
		* Fixed crash on amulegui when exiting.
		* Fix for CheckDirExists() for empty directory string.

	Xaignar:
		* Ensured that partial files left from failed file-completion attempts
		  would be removed.
		* Fixed crash on remote gui when attempting to reload the ipfilters.
		* Fixed sorting of servers by ping-time, such that servers without a
		  known pingtime are sorted last.
		* Added a "Password incorrect" message to the login pages, for when
		  login failed. Also added a warning in case no passwords were set.
		* Ensured that known-file objects are properly initialized on the
		  remote gui. This among other things fixes not all of the items on
		  the sharedfiles list showing a 'has-comment' flag.
		* Compilation fix for GCC 3.2.
		* Fixed CheckDirExists not working for root-paths (on both windows and
		  linux) and not handling all types of path-seperators on windows.
		* Fixed security problems with aMuleWeb:
			* All images could be accessed, even when not logged in, and this
			  included dynamically generated images, such as progress bars and
			  graphs, resulting in various information leakage.
			* It was possible to craft an URL such that any image on the
			  harddisk would be returned, provided that the full path was
			  known. File types were decided by the filename extension and
			  included 'gif', 'jpg', 'ico', 'png', 'bmp' and 'jpeg'.
			* When logged in, it was possible to craft an URL such that any
			  html or php file on the harddisk would be returned, provided
			  that the full path was known. File types were decided by the
			  filename extension and included 'html' and 'php'.
		* Decreased the minimum value for Max-Connections in the preferences
		  dialog to 5.
			
	Special Thanks To: